--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ bower.json
 node_modules/
 
 # Ignore precompiled javascript packs
-/public/uploads/*
+/public/uploads/
 
 # Ignore yarn files
 /yarn-error.log
